# bpmn-engine-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  PROJECT.jsonld  README.md  activities.jsonld  capabilities.jsonld
.github/workflows/: test.yml
examples/: simple_process.rs
src/: lib.rs
src/activity/: factory.rs  listener.rs  mod.rs  plugin.rs  traits.rs
src/capability/: mod.rs  traits.rs
src/elements/: event.rs  gateway.rs  mod.rs  task.rs
src/engine/: context.rs  evaluator.rs  executor.rs  instance.rs  mod.rs  timer.rs
src/model/: elements.rs  format.rs  json.rs  mod.rs  process.rs  xml.rs
src/repository/: memory.rs  mod.rs  traits.rs
tests/: integration_test.rs  unit_test.rs
tests/helpers/: builders.rs  fixtures.rs  mock_listener.rs  mocks.rs  mod.rs
tests/integration/: comprehensive_test.rs  listener_test.rs  mod.rs  process_execution_test.rs  timer_test.rs
tests/unit/: mod.rs
tests/unit/activity/: factory_test.rs  listener_test.rs  mod.rs
tests/unit/elements/: call_activity_test.rs  data_object_test.rs  escalation_test.rs  event_test.rs  extension_test.rs  gateway_test.rs  mod.rs  multi_instance_test.rs  signal_test.rs  task_test.rs  timer_test.rs
tests/unit/engine/: context_test.rs  mod.rs
tests/unit/model/: elements_test.rs  json_test.rs  mod.rs  process_test.rs  xml_test.rs
tests/unit/repository/: memory_test.rs  mod.rs
