[package]
name = "bpmn-engine"
version = "0.1.0"
edition = "2021"
authors = ["gftdcojp"]
description = "BPMN 2.0 execution engine for Rust"
license = "MIT"
repository = "https://github.com/gftdcojp/bpmn-engine-ts"

[lib]
name = "bpmn_engine"
path = "src/lib.rs"

[[bin]]
name = "bpmn-engine"
path = "src/bin/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Future: GraphQL API
# async-graphql = "7"

[dev-dependencies]
tokio-test = "0.4"

