[package]
name = "bpmn-engine"
version = "0.1.0"
edition = "2021"
authors = ["gftdcojp"]
description = "BPMN 2.0 execution engine for Rust with JSON and XML format support"
license = "Apache-2.0"
repository = "https://github.com/gftdcojp/bpmn-engine-ts"
readme = "README.md"
keywords = ["bpmn", "workflow", "process", "engine", "execution", "xml", "json"]
categories = ["algorithms", "concurrency"]

[lib]
name = "bpmn_engine"
path = "src/lib.rs"

[[bin]]
name = "bpmn-engine"
path = "src/bin/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XML parsing
quick-xml = { version = "0.31", features = ["serialize"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Future: GraphQL API
# async-graphql = "7"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
proptest = "1.5"
test-log = "0.2"

